--- a/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart.WinPhone/Views/WinPhoneAboutPage.xaml
+++ b/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart.WinPhone/Views/WinPhoneAboutPage.xaml
@@ -1,5 +1,5 @@
 ﻿<phone:PhoneApplicationPage
-    x:Class="ShoppingCart.WinPhone.Views.AboutPage"
+    x:Class="ShoppingCart.WinPhone.Views.WinPhoneAboutPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
