Fix link to point to the right branch.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,7 +21,7 @@
       <div class="inner">
         <h1>Spikes</h1>
         <h2>Test and simple sample code.  Nothing fancy, lots of dead ends.  No dragons.</h2>
-        <a href="https://github.com/jquintus/spikes" class="button"><small>View project on</small> GitHub</a>
+        <a href="https://github.com/jquintus/spikes/tree/gh-pages" class="button"><small>View project on</small> GitHub</a>
       </div>
     </header>
     <div id="content-wrapper">
