Fix the home link

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
   <body>
     <header>
       <div class="inner">
-        <a href="/"> <h1> Spikes </h1> </a>
+        <a href="{{ site.baseurl}}"> <h1> Spikes </h1> </a>
         <h2>Test and simple sample code.  Nothing fancy, lots of dead ends.  No dragons.</h2>
         <a href="https://github.com/jquintus/spikes/tree/gh-pages" class="button"><small>View project on</small> GitHub</a>
       </div>
