Move all of the wix installer spike out of the FunWithSpikes project.

--- a/WixOnWixOff/WixOnWixOff/Product.wxs
+++ b/WixOnWixOff/WixOnWixOff/Product.wxs
@@ -37,7 +37,7 @@
   <Fragment>
     <ComponentGroup Id="ProductComponents" Directory="INSTALLFOLDER">
       <Component Id="ProductComponent">
-        <File Source="$(var.ExistentialFiles.TargetPath)" />
+        <File Source="$(var.SampleApp.TargetPath)" />
       </Component>
     </ComponentGroup>
   </Fragment>
