--- a/ConsoleApps/FunWithSpikes/FunWithNinject.Web/Views/Home/Index.cshtml
+++ b/ConsoleApps/FunWithSpikes/FunWithNinject.Web/Views/Home/Index.cshtml
@@ -1,9 +1,6 @@
-﻿@{
-    ViewBag.Title = "Home Page";
-}
-
+﻿
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
+    <h1>@ViewBag.Title</h1>
     <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
     <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
